# Mcp_router

./: COMMENTS.md  README.md
mcp-stack/: .gitignore  Cargo.toml  README.md
mcp-stack/config/: router.toml
mcp-stack/crates/mcp-claude/: Cargo.toml
mcp-stack/crates/mcp-claude/src/: main.rs
mcp-stack/crates/mcp-fs/: Cargo.toml
mcp-stack/crates/mcp-fs/src/: main.rs
mcp-stack/crates/mcp-ollama/: Cargo.toml
mcp-stack/crates/mcp-ollama/src/: main.rs
mcp-stack/crates/mcp-openai/: Cargo.toml
mcp-stack/crates/mcp-openai/src/: main.rs
mcp-stack/crates/mcp-webfetch/: Cargo.toml
mcp-stack/crates/mcp-webfetch/src/: main.rs
mcp-stack/crates/router/: Cargo.toml
mcp-stack/crates/router/src/: admin.rs  auth.rs  config.rs  crypto.rs  jsonrpc.rs  lib.rs  main.rs  metrics.rs  providers.rs  router.rs  sse.rs  subs.rs  upstream.rs  util.rs
mcp-stack/gui/: app.js  index.html  styles.css
mcp-stack/gui/static/: app.js  styles.css
mcp-stack/migrations/: 0001_init.sql  0002_providers.sql  20240101000000_init.sql
mcp-stack/packaging/: Dockerfile  mcp-router.service
mcp-stack/scripts/: build_and_pack.bat  start_linux.sh  start_macos.command  start_windows.bat
mcp-stack/tests/: admin_api.rs  basic.rs
