[workspace]
members = [
    "crates/router",
    "crates/mcp-fs",
    "crates/mcp-webfetch",
    "crates/mcp-ollama",
    "crates/mcp-openai",
    "crates/mcp-claude",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["MCP Stack Maintainers <maintainers@example.com>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
async-trait = "0.1"
metrics = "0.21"
metrics-exporter-prometheus = "0.14"
walkdir = "2"
tokio-stream = "0.1"
reqwest-eventsource = "0.5"
ring = "0.17"
toml = "0.8"
