[package]
name = "mcp-openai"
version = "0.1.0"
edition = "2021"
authors = ["MCP Stack Team"]
license = "MIT OR Apache-2.0"
description = "OpenAI MCP server"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

