[package]
name = "mcp-router"
version = "0.1.0"
edition = "2021"
authors = ["MCP Stack Team"]
license = "MIT OR Apache-2.0"
description = "MCP router with subscription enforcement"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
color-eyre = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_with = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
bytesize = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }
include_dir = { workspace = true }

[features]
default = []

[build-dependencies]
anyhow = { workspace = true }
include_dir = { workspace = true }

[package.metadata.sqlx]
no-default-features = true
features = ["runtime-tokio", "sqlite"]
